Closed Bug 978646 Opened 11 years ago Closed 11 years ago

Leak with expando on document.styleSheetSets

Categories

(Core :: DOM: CSS Object Model, defect)

x86_64
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla30

People

(Reporter: jruderman, Assigned: bzbarsky)

References

Details

(Keywords: memory-leak, regression, testcase)

Attachments

(3 files)

Attached file testcase
No description provided.
Attached file leak info
Blocks: 803106
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Whiteboard: [need review]
Comment on attachment 8384671 [details] [diff] [review] Properly cycle-collect document.styleSheetSets. Review of attachment 8384671 [details] [diff] [review]: ----------------------------------------------------------------- ::: content/base/src/nsDocument.cpp @@ +1899,5 @@ > NS_IMPL_CYCLE_COLLECTION_TRAVERSE(mDisplayDocument) > > // Traverse all nsDocument nsCOMPtrs. > NS_IMPL_CYCLE_COLLECTION_TRAVERSE(mParser) > NS_IMPL_CYCLE_COLLECTION_TRAVERSE(mScriptGlobalObject) Some of these other fields, mParser and mScriptGlobalObject, don't seem to be unlinked either.
Yeah, see this comment in unlink there: // nsDocument has a pretty complex destructor, so we're going to // assume that *most* cycles you actually want to break somewhere // else, and not unlink an awful lot here.
Attachment #8384671 - Flags: review?(bugs) → review+
Flags: in-testsuite+
Whiteboard: [need review]
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: