Bug 978646.  Properly cycle-collect document.styleSheetSets.  r=smaug